# CCM450-diag

./: .gitignore  .gitmodules  README.md
a-minimum/: Cargo.toml  cargo_run_examples.sh  riscv32.size  riscv32.sizes
a-minimum/.cargo/: config.toml
a-minimum/docs/: usb_uart.txt
a-minimum/src/: main.rs  panic_handlers.rs
an-embassy/: Cargo.toml  riscv32.size
an-embassy/.cargo/: config.toml
an-embassy/docs/: macros.txt  syncness.txt
an-embassy/src/: main.rs  panic_handlers.rs
embassy/embassy-executor/: Cargo.toml
embassy/embassy-executor-macros/: Cargo.toml
embassy/embassy-executor-macros/src/: lib.rs
embassy/embassy-executor-macros/src/macros/: task.rs
embassy/embassy-executor-macros/src/util/: ctxt.rs
embassy/embassy-executor/src/: lib.rs  spawner.rs
embassy/embassy-executor/src/raw/: mod.rs  run_queue_critical_section.rs  state_critical_section.rs  timer_queue.rs  util.rs  waker.rs
embassy/embassy-time-driver/: Cargo.toml
embassy/embassy-time-driver/src/: lib.rs
esp-hal/: Cargo.toml
esp-hal/esp-backtrace/: Cargo.toml
esp-hal/esp-backtrace/src/: lib.rs  riscv.rs
esp-hal/esp-build/: Cargo.toml
esp-hal/esp-build/src/: lib.rs
esp-hal/esp-hal/: Cargo.toml  build.rs
esp-hal/esp-hal-embassy/: Cargo.toml  build.rs
esp-hal/esp-hal-embassy/src/: lib.rs  time_driver.rs
esp-hal/esp-hal-embassy/src/executor/: mod.rs  thread.rs
esp-hal/esp-hal-procmacros/: Cargo.toml
esp-hal/esp-hal-procmacros/src/: embassy.rs  lib.rs
esp-hal/esp-hal/ld/esp32c3/: esp32c3.x  linkall.x  memory.x  rom-functions.x  text.x
esp-hal/esp-hal/ld/riscv/: debug.x  hal-defaults.x
esp-hal/esp-hal/ld/sections/: debug_text.x  rwdata.x  rwtext.x  stack.x  text.x
esp-hal/esp-hal/src/: fmt.rs  lib.rs  lock.rs  peripheral.rs
esp-hal/esp-hal/src/interrupt/: mod.rs  riscv.rs
esp-hal/esp-hal/src/soc/: mod.rs
esp-hal/esp-hal/src/soc/esp32c3/: mod.rs  peripherals.rs
esp-hal/esp-metadata/: Cargo.toml
esp-hal/esp-metadata/devices/: esp32.toml  esp32c2.toml  esp32c3.toml  esp32c6.toml  esp32h2.toml  esp32p4.toml  esp32s2.toml  esp32s3.toml
esp-hal/esp-metadata/src/: lib.rs
esp-hal/esp-println/: Cargo.toml
esp-hal/esp-println/src/: defmt.rs  fmt.rs  lib.rs  logger.rs
esp-hal/esp-riscv-rt/: Cargo.toml
esp-hal/esp-riscv-rt/src/: lib.rs
esp-pacs/: Cargo.toml
esp-pacs/esp32c3/: Cargo.toml  build.rs  device.x
esp-pacs/esp32c3/src/: generic.rs  interrupt.rs  interrupt_core0.rs  lib.rs
esp-pacs/esp32c3/src/generic/: raw.rs
esp-pacs/esp32c3/src/interrupt_core0/: cpu_int_clear.rs  cpu_int_enable.rs  cpu_int_pri.rs  cpu_int_thresh.rs  cpu_int_type.rs  intr_status_reg_0.rs  intr_status_reg_1.rs
riscv/: Cargo.toml
riscv/riscv/: Cargo.toml
riscv/riscv-pac/: Cargo.toml
riscv/riscv-pac/src/: lib.rs  result.rs
riscv/riscv-rt/: Cargo.toml
riscv/riscv-rt/macros/: Cargo.toml
riscv/riscv-rt/macros/src/: lib.rs
riscv/riscv/src/: bits.rs  interrupt.rs  lib.rs  register.rs
riscv/riscv/src/register/: macros.rs  mcause.rs  mstatus.rs  mtvec.rs
