[package]
name = "an-embassy"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt            = { version = "0.3.8",  optional = true }
embassy-executor = { version = "0.6.0", path = "../embassy/embassy-executor",optional = true, features = [
    # feature to allocate all tasks in statics
    "nightly" ]}
esp-hal          = { version = "0.20.1", path = "../esp-hal/esp-hal" }
esp-backtrace    = { version = "0.14.1",  path = "../esp-hal/esp-backtrace", optional = true, features = [
    "panic-handler", "exception-handler"] }
esp-hal-embassy  = { path = "../esp-hal/esp-hal-embassy", optional = true }
esp-println      = { version = "0.11.0", path = "../esp-hal/esp-println" }

[features]
default = ["esp32c3", "embassy"]

esp32c3 = ["esp-hal/esp32c3", "esp-println/esp32c3", "esp-backtrace?/esp32c3", "esp-hal-embassy?/esp32c3"]

# if you switch this feature, you should also need to change config.toml
# runner = "espflash flash --monitor --log-format defmt"
# "-C", "link-arg=-Tdefmt.x",
defmt = [
    "dep:defmt",
    "esp-hal/defmt",
    "esp-println/defmt-espflash",
    "esp-backtrace?/defmt",
    "embassy-executor/defmt",
]

# println calls become empty code
# this controls only no defmt println
no-op = ["esp-println/no-op"]

# using esp-backtrace
# "-C", "force-frame-pointers" needed in config.toml
esp-backtrace = ["dep:esp-backtrace"]

embassy = ["dep:esp-hal-embassy", "dep:embassy-executor"]
