[package]
name = "embassy-executor"
version = "0.6.0"
edition = "2021"

[dependencies]
defmt                   = { version = "0.3.8", optional = true }
embassy-executor-macros = { version = "0.5.0", path = "../embassy-executor-macros" }
# only for unwrap macro
esp-hal                 = { version = "0.20.1", path = "../../esp-hal/esp-hal" }
critical-section        = "1.1"

[features]
## Enable nightly-only features
# This will make embassy-executor use the impl_trait_in_assoc_type feature to allocate all tasks in statics.
nightly = ["embassy-executor-macros/nightly"]

## Use the executor-integrated `embassy-time` timer queue.
integrated-timers = []

