[package]
name = "esp-hal-procmacros"
version = "0.13.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
darling           = "0.20.10"
proc-macro-crate  = "3.2.0"
proc-macro-error2 = "2.0.0"
proc-macro2       = "1.0.86"
quote             = "1.0.37"
syn               = { version = "2.0.76", features = ["extra-traits", "full"] }

[features]
## Provide a `#[ram]` procmacro to place functions in RAM instead of flash.
ram = []