[package]
name = "esp-hal"
version = "0.20.1"
edition = "2021"

[dependencies]
critical-section = "1.1.3"
defmt            = { version = "0.3.8", path = "../../defmt/defmt", optional = true }
log              = { version = "0.4.22", optional = true }
procmacros       = { version = "0.13.0", features = ["ram"], package = "esp-hal-procmacros", path = "../esp-hal-procmacros" }
riscv            = { version = "0.11.1", path = "../../riscv/riscv", optional = true }

# IMPORTANT:
# Each supported device MUST have its PAC included below along with a
# corresponding feature.
esp32c3 = { version = "0.25.0", path = "../../esp-pacs/esp32c3", features = ["rt"], optional = true }

[target.'cfg(target_arch = "riscv32")'.dependencies]
esp-riscv-rt = { version = "0.9.0", path = "../esp-riscv-rt" }

[build-dependencies]
esp-build    = { version = "0.1.0", path = "../esp-build" }
esp-metadata = { version = "0.3.0", path = "../esp-metadata" }

[features]
riscv  = ["dep:riscv"]

## Enable logging output using the `log` crate.
log = ["dep:log"]

# Chip Support Feature Flags
# Target the ESP32.
esp32   = []
# Target the ESP32-C2.
esp32c2 = []
# Target the ESP32-C3.
esp32c3 = ["dep:esp32c3", "riscv"]
# Target the ESP32-C6.
esp32c6 = []
# Target the ESP32-H2.
esp32h2 = []
# Target the ESP32-S2.
esp32s2 = []
# Target the ESP32-S3.
esp32s3 = []

#! ### Trait Implementation Feature Flags
## Implement `defmt::Format` on certain types.
defmt = [
    "dep:defmt",
]
