[package]
name = "esp-hal"
version = "0.20.1"
edition = "2021"

[dependencies]
critical-section = "1.1.3"
defmt            = { version = "0.3.8", optional = true }
procmacros       = { version = "0.13.0", features = ["ram"], package = "esp-hal-procmacros", path = "../esp-hal-procmacros" }
riscv            = { version = "0.11.1", path = "../../riscv/riscv", optional = true }

# IMPORTANT:
# Each supported device MUST have its PAC included below along with a
# corresponding feature.
esp32c3 = { version = "0.25.0", path = "../../esp-pacs/esp32c3", features = ["rt"], optional = true }

[target.'cfg(target_arch = "riscv32")'.dependencies]
esp-riscv-rt = { version = "0.9.0", path = "../esp-riscv-rt" }

[build-dependencies]
esp-build    = { version = "0.1.0", path = "../esp-build" }
esp-metadata = { version = "0.3.0", path = "../esp-metadata" }

[features]
riscv  = ["dep:riscv", "critical-section/restore-state-u8"]

# Chip Support Feature Flags
esp32c3 = ["dep:esp32c3", "riscv"]

#! ### Trait Implementation Feature Flags
## Implement `defmt::Format` on certain types.
defmt = [
    "dep:defmt",
    "esp32c3?/defmt",
]
