[package]
name = "esp-println"
version = "0.11.0"
edition = "2021"

[dependencies]
critical-section = { version = "1.1.3",  optional = true }
defmt            = { version = "0.3.8",  path = "../../defmt/defmt", optional = true }
portable-atomic  = { version = "1.7.0",  optional = true, default-features = false }

[features]
default          = ["critical-section", "jtag-serial"]
critical-section = ["dep:critical-section"]

# You must enable exactly 1 of the below features to support the correct chip:
esp32   = []
esp32c2 = []
esp32c3 = []
esp32c6 = []
esp32h2 = []
esp32p4 = []
esp32s2 = []
esp32s3 = []

# You must enable exactly 1 of the below features to enable to intended
# communication method (note that "auto" is enabled by default):
jtag-serial = ["dep:portable-atomic"] # C3, C6, H2, P4, and S3 only!
#uart        = []
#auto        = ["dep:portable-atomic"]

# Don't print anything
no-op = []

# Enables a `defmt` backend usable with espflash. We force rzcobs encoding to simplify implementation
defmt-espflash = ["dep:defmt", "defmt?/encoding-rzcobs"]